// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 1`] = `
<IconCell
  rowData={
    {
      "archive_type": undefined,
      "extension": undefined,
      "has_collaborations": false,
      "is_externally_owned": false,
      "type": "folder",
    }
  }
/>
`;

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 2`] = `
<IconCell
  rowData={
    {
      "archive_type": undefined,
      "extension": undefined,
      "has_collaborations": true,
      "is_externally_owned": false,
      "type": "folder",
    }
  }
/>
`;

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 3`] = `
<IconCell
  rowData={
    {
      "archive_type": undefined,
      "extension": undefined,
      "has_collaborations": true,
      "is_externally_owned": true,
      "type": "folder",
    }
  }
/>
`;

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 4`] = `
<IconCell
  rowData={
    {
      "archive_type": undefined,
      "extension": undefined,
      "has_collaborations": false,
      "is_externally_owned": true,
      "type": "folder",
    }
  }
/>
`;

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 5`] = `
<IconCell
  rowData={
    {
      "archive_type": "archive",
      "extension": undefined,
      "has_collaborations": false,
      "is_externally_owned": false,
      "type": "folder",
    }
  }
/>
`;

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 6`] = `
<IconCell
  rowData={
    {
      "archive_type": "folder_archive",
      "extension": undefined,
      "has_collaborations": false,
      "is_externally_owned": false,
      "type": "folder",
    }
  }
/>
`;
